--- a/post/20200404001/grayscale.css
+++ b/post/20200404001/grayscale.css
@@ -1,4 +1,4 @@
-.html {
+html {
     filter: grayscale(100%);            /* 普通的CSS */
     -webkit-filter: grayscale(100%);    /* Webkit的CSS Chrome Opera 等*/
     -moz-filter: grayscale(100%);       /* Mozilla的CSS Firefox 等 */
